Add documentation to the project

--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
         }
     },
     "require-dev": {
-        "mediact/testing-suite": "^2.4",
+        "mediact/testing-suite": "@stable",
         "mediact/coding-standard-magento2": "@stable"
     },
     "archive": {
